# tokencrunch

./: 001-python-fastapi-stack.md  CLAUDE.md  ROADMAP.md  pipeline.py  pyproject.toml
docs/: README.md
docs/adr/: 001-python-fastapi-stack.md  002-layered-pipeline-architecture.md  003-transparent-proxy-pattern.md  004-toml-configuration.md  README.md
src/tokencrunch/: __init__.py  cli.py  config.py  proxy.py
src/tokencrunch/layers/: __init__.py  syntactic.py
tests/: conftest.py
tests/e2e/: test_proxy_e2e.py
tests/integration/: test_proxy.py
tests/unit/: test_config.py  test_pipeline.py  test_syntactic.py
