[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencrunch"
version = "0.1.0"
description = "Multi-layer token compression proxy for AI coding assistants"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx[http2]>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "anyio[trio]>=4.0",
    "ruff>=0.4",
]

[project.scripts]
tokencrunch = "tokencrunch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokencrunch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
